feat:add category on product template

--- a/store/templates/Home.html
+++ b/store/templates/Home.html
@@ -37,8 +37,8 @@
                     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 md:gap-x-8 w-full">
                       <div class="relative group flex justify-center items-center h-full w-full transform duration-300 hover:scale-105 hover:shadow-lg">
                         <img class="object-center object-cover h-full w-full" src='{{dept0_image_url }}' alt="perfume" />
-                        <a href="{% url 'clothing' %}" class="bg-[#fbab2b] text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-400 bottom-4 z-10 absolute text-base font-medium leading-none  py-3 w-36 ">{{dept0_name }}</a>
-                        <div class="absolute opacity-0 group-hover:opacity-100 transition duration-500 bottom-3 py-6 z-0 px-20 w-36 bg-white bg-opacity-50"></div>
+                        <a href="{% url 'clothing' %}" class="bg-[#fbab2b] text-center text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-400 bottom-4 z-10 absolute text-base font-medium leading-none  p-3 w-46 ">{{dept0_name }}</a>
+                        <div class="absolute opacity-0 group-hover:opacity-100 transition duration-500 bottom-3 py-6 z-0 px-24 w-44 bg-white bg-opacity-50"></div>
                       </div>
               
                       <div class="flex flex-col space-y-4 md:space-y-8 mt-4 md:mt-0 ">
