--- a/store/templates/clothing.html
+++ b/store/templates/clothing.html
@@ -8,8 +8,8 @@
         <div class="relative group h-[500px] hover:scale-105 transition-all duration-200 ">
             <img src='{% static "images/women.jpg" %}' alt="image" class="shadow-xl w-full h-full object-cover object-center">
             <div class=" flex justify-center absolute bottom-0 left-0 right-0  overflow-hidden h-0 group-hover:h-full transition-all duration-1000 bg-gradient-to-b from-[rgba(90,89,72,0)]  to-[rgba(90,89,72,0.6)]">
-                <a href="{% url 'clothingdetail' 2 %}" class="bg-[#fbab2b] text-center z-10 text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-400 bottom-[40px]  absolute text-base font-medium leading-none  py-3 w-36 ">Women's Clothing</a>
-                <div class="absolute opacity-0 group-hover:opacity-100 transition duration-500 bottom-[36px] py-6 z-0 px-20 w-36 bg-white bg-opacity-50"></div>
+                <a href="{% url 'clothingdetail' 2 %}" class="bg-[#fbab2b] text-center z-10 text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-400 bottom-[40px]  absolute text-base font-medium leading-none  p-3 w-46 ">Women's Clothing</a>
+                <div class="absolute opacity-0 group-hover:opacity-100 transition duration-500 bottom-[36px] py-6 z-0 px-20 w-44 bg-white bg-opacity-50"></div>
 
             </div>
         </div>
