--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -9,7 +9,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <script type="text/javascript" src="{% static 'js/cart.js' %}"></script>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,500&family=Poppins&family=Roboto+Serif:opsz,wght@8..144,300&display=swap" rel="stylesheet">
+	<script type="text/javascript" src="{% static 'js/cart.js' %}"></script>
     <title>{{title_variable}}</title>
     <script type="text/javascript">
 		var user = '{{request.user}}'
@@ -63,7 +66,7 @@
 </head>
 <body>
     {% include "navbar.html" %}
-    <div class="text-[#282220] ">
+    <div class="text-[#282220] " style="font-family: 'Poppins', sans-serif;">
         {% block content %}
       
         {% endblock content %}
