--- a/store/templates/men_women.html
+++ b/store/templates/men_women.html
@@ -5,21 +5,53 @@
 <div>
     <div>
         {% if products %}
-            <div class="mt-16 px-4 sm:px-6 xl:px-20 2xl:px-0 overflow-hidden">
+            <div class="mt-16 px-4 sm:px-6 xl:px-20 2xl:px-0 ">
                 <h3 class="text-[#282220] text-2xl font-medium">All Products</h3>
-                <div class="grid gap-6 grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 mt-6">
+                <div class="relative  flex gap-[20px] flex-wrap pt-[40px]">
+                    {% for category in category %}
+                    <div class=" group flex  flex-wrap">
+                        
+                      <p class=" group hover:cursor-pointer text-sm px-4 py-[6px]  rounded-md border">{{category.name}}</p>
+                      <div class="group-hover:flex hover:flex max-sm:flex-col items-center flex-wrap  gap-[20px] hidden absolute bg-gray-50 shadow-md px-[30px] max-sm:py-[30px] py-[50px] mt-[5px] top-full left-0  w-full  z-10 ">
+                        
+                        {% for child in category.childrentwo.all %}
+
+                            <p class="font-bold text-sm text-gray-900 hover:cursor-pointer hover:text-[#fbab2b] shadow-none">{{child.name}}</p>
+                        {% endfor %}
+
+
+                      </div>
+
+
+                    </div>
+                    {% endfor %}
+                </div>
+                <div class="grid gap-6 grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 mt-6 ">
                     {% for product in products  %}
-                        <div class=" p-[20px] w-full max-w-sm mx-auto rounded-md shadow-md overflow-hidden transform duration-300 hover:scale-105 hover:shadow-lg">
-                            <div class="flex items-end justify-end h-56 w-full bg-cover bg-center" style="background-image: url('{{product.imageURL}}')">
-                                <button data-product="{{product.id}}" data-action="add" class="update-cart p-2 rounded-full  text-white mx-5 -mb-4 bg-[#fbab2b] hover:bg-[rgba(251,171,43,0.6)] focus:outline-none focus:bg:[rgba(251,171,43,0.6)]">
-                                    <svg class="h-5 w-5" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" stroke="currentColor"><path d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z"></path></svg>
-                                </button>
-                            </div>
-                            <div class=" flex justify-between items-center pt-6">
-                                <h3 class="text-gray-700 uppercase">{{product.name}}</h3>
-                                <span class="text-gray-500 mt-2">{{product.price}}</span>
-                            </div>
+                    <div class=" p-[20px] w-full sm:max-w-sm  rounded-md shadow-md overflow-hidden transform duration-300 hover:scale-105 hover:shadow-lg">
+                        <div class="flex items-end justify-end h-56 w-full bg-cover bg-center" style="background-image: url('{{product.imageURL}}')">
+                            
+                          <button  class="p-2 rounded-full  text-white mx-5 -mb-4 bg-[#fbab2b] hover:bg-[rgba(251,171,43,0.6)] focus:outline-none focus:bg:[rgba(251,171,43,0.6)]">
+                            <div class="w-4  transform  hover:scale-110">
+                              <a href="#">
+                                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
+                                      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z" />
+                                  </svg>
+                              </a>
+
+                          </div>
+                          </button>
                         </div>
+                        <div class=" flex justify-between items-center pt-6">
+                            <h3 class="text-gray-700 uppercase">{{product.name}}</h3>
+                            <span class="text-gray-500 mt-2">{{product.price}}</span>
+                        </div>
+                        <button data-product="{{product.id}}" data-action="add" class=" update-cart inline-block text-white font-bold py-2 px-4 mt-[20px] rounded-md bg-gradient-to-r from-[#fbab2b] to-[rgba(251,171,43,0.7)] border border-transparent transform hover:scale-110 hover:border-white transition-transform duration-3000 ease-in-out">
+                          ADD TO CART
+                        </button>
+                    </div>
+                    
                       
                     {% endfor %}
 
@@ -59,7 +91,16 @@
             </div>
 
         {% else %}
-        <p>no produt to display</p>
+        <div class="flex  items-center justify-center ">
+            <div class="rounded-lg bg-gray-50 px-16 py-14">
+              <div class="flex justify-center">
+
+              </div>
+              <h3 class="my-4 text-center text-3xl font-semibold text-gray-700 ">Oops!!!</h3>
+              <p class="w-[230px] text-center font-normal text-gray-600 uppercase">there is no item added</p>
+              <a href="{% url 'clothing' %}" class="mx-auto mt-10 block rounded-xl border-4 border-transparent bg-[#fbab2b] px-6 py-3 text-center text-base font-medium text-orange-100 outline-8 hover:outline hover:duration-300 uppercase">Clothing & Fashion</a>
+            </div>
+          </div>
         
         {% endif %}
     </div>
