feat:add register page

--- a/store/templates/men_women.html
+++ b/store/templates/men_women.html
@@ -97,7 +97,7 @@
 
               </div>
               <h3 class="my-4 text-center text-3xl font-semibold text-gray-700 ">Oops!!!</h3>
-              <p class="w-[230px] text-center font-normal text-gray-600 uppercase">there is no item added</p>
+              <p class="w-[230px] text-center font-normal text-gray-600 uppercase">there is no item</p>
               <a href="{% url 'clothing' %}" class="mx-auto mt-10 block rounded-xl border-4 border-transparent bg-[#fbab2b] px-6 py-3 text-center text-base font-medium text-orange-100 outline-8 hover:outline hover:duration-300 uppercase">Clothing & Fashion</a>
             </div>
           </div>
