--- a/store/templates/navbar.html
+++ b/store/templates/navbar.html
@@ -9,9 +9,9 @@
                         <img href="" class=" h-[50px] lg:text-2xl text-xl uppercase tracking-wider cursor-pointer font-bold" src='{% static "images/Logo.png" %}' alt="logo">
                     </a>
                 </div>
-                <div class="flex lg:gap-8 gap-6 uppercase tracking-wider cursor-pointer text-lg  items-center" id="navItems">
+                <div class="flex lg:gap-8 gap-6 uppercase tracking-wider cursor-pointer text-sm md:text-lg  items-center" id="navItems">
                     <span class="group">
-                        Services
+                        shop
                         <div class="w-0 group-hover:w-full h-0.5 bg-white ease-in-out duration-500"></div>
                     </span>
                     <span class="group">
@@ -35,12 +35,46 @@
                         
                     </div>
                 </div>
-                <div id="hamburger" class="fa fa-bars flex items-center text-xl" style="display:none;"></div>
+                <div class="flex gap-4 max-sm:hidden">
+
+                    {% if request.user.is_authenticated %}
+                        <p>{{user.name}}</p>
+                        <a class="btns" href="{% url 'logout' %}">logout</a>
+                    {% else %} 
+                    <a class="btns" href="{% url 'register' %}">register</a>
+                    <a class="btns" href="{% url 'login' %}">login</a>
+                    {% endif %}
+                    
+                </div>
+                <div id="hamburger" class="fa fa-bars max-sm:flex items-center text-xl hidden" style="display:none;"></div>
                 <div id="mobileNav"
-                    class="fixed z-10 flex flex-col gap-8 pt-16 px-4 text-xl uppercase bg-[#5a5948] h-full inset-0 top-16 w-[70%] left-[-70%] ease-in-out duration-500 cursor-pointer">
-                    <span>Services</span>
+                    class="fixed z-10 max-sm:flex sm:hidden flex-col gap-8 pt-16 px-4 text-xl uppercase bg-[#5a5948] h-full inset-0 top-16 w-[70%] left-[-70%] ease-in-out duration-500 cursor-pointer">
+                    <span>Shop</span>
                     <span>About</span>
                     <span>Contact</span>
+                    <div class="  flex sm:justify-center sm:items-center ">
+                        <a class="relative py-2" href="{% url 'cart' %}">
+                            <div class="top-[-5px] absolute left-[15px]">
+                                <p class="flex h-2 w-2 items-center justify-center rounded-full bg-red-500 p-3 text-xs text-white">{{order.get_cart_items|default:"0"}}</p>
+                            </div>
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="file:  h-6 w-6">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
+                            </svg>
+
+                        </a>
+                        
+                    </div>
+                    <div class="flex flex-col gap-4 sm:hidden">
+
+                        {% if request.user.is_authenticated %}
+                            <a>{{user.name}}</a>
+                            <a class="btns" href="{% url 'logout' %}">logout</a>
+                        {% else %} 
+                        <a class="btns" href="{% url 'register' %}">register</a>
+                        <a class="btns" href="{% url 'login' %}">login</a>
+                        {% endif %}
+                        
+                    </div>
                 </div>
             </div>
         </nav>
@@ -54,7 +88,7 @@
             function adjustNavbar() {
                 screenWidth = parseInt(window.innerWidth);
 
-                if (screenWidth < 541) {
+                if (screenWidth < 640) {
                     navItems.style.display = "none";
                     hamburger.style.display = "flex";
                 }
